# graphics-projects

./: CMakeLists.txt  GLContext.cpp  GLContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  PointCloud.cpp  PointCloud.h  PointLight.cpp  PointLight.h  README.md  Time.cpp  Time.h  Trackball.cpp  Trackball.h  Window.cpp  Window.h  main.cpp  shader.cpp  shader.h
cmake/: FindGLFW3.cmake  FindGLM.cmake
components/: ConstraintAnimator.cpp  ConstraintAnimator.h  FreeFlying.cpp  FreeFlying.h  HumanoidAnimation.cpp  HumanoidAnimation.h  Transform.cpp
components/geometries/: BezierCurve.cpp  BezierCurve.h  Mesh.cpp  Mesh.h  Robot.h  Wireframe.cpp  Wireframe.h
gl_wraps/: GLBuffer.h  GLContext.cpp  GLObject.h  GLVertexArray.h  Shader.cpp  Shader.h
objects/: Camera.cpp  Camera.h  ControlTriple.cpp  ControlTriple.h  Cube.cpp  Cube.h  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Object.h  PointCloud.h  Robot.cpp  Robot.h  Skybox.cpp  Skybox.h  Trackball.cpp  Trackball.h  Transform.cpp  Transform.h  Wireframe.cpp  Wireframe.h
objects/components/: Component.h  FreeFlying.cpp  FreeFlying.h  HumanoidAnimation.cpp  Transform.h
objects/components/geometries/: Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Robot.cpp  Robot.h  Wireframe.cpp  Wireframe.h
shaders/: Shader.cpp  Shader.h  bezier.geom  flat.frag  flat.vert  normal_coloring.frag  normal_coloring.vert  phong.frag  phong.vert  reflection_map.frag  shader.frag  skybox.frag  skybox.vert
textures/: stb_image.h
